--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_screenutil: ^5.6.0
   modal_bottom_sheet: ^2.1.2
   table_calendar: ^3.0.8
+  websafe_svg: ^2.1.2+7
+  flutter_staggered_grid_view: ^0.6.2
   # bottom_indicator_bar: ^2.0.0
 
 dev_dependencies:
